# TelescopeAutotrack

./: .gitignore  .gitmodules  LICENSE  README.md  sdkconfig
components/CanonM50/: CMakeLists.txt
components/CanonM50/include/CanonM50/: CanonM50.hpp  ConnectivityState.hpp  IntervalometerTask.hpp  Scan.hpp
components/CanonM50/src/: CanonM50.cpp  ConnectivityState.cpp  IntervalometerTask.cpp  Scan.cpp
components/smk_wifi/: CMakeLists.txt  Kconfig.projbuild  smk_wifi.cpp
components/smk_wifi/include/: smk_wifi.hpp
main/: CMakeLists.txt  Queue.hpp  core.css  index.html  main.cpp  scope.js  stepper.cpp  stepper.hpp  telescope.cpp  telescope.hpp  uart.cpp  uart.hpp  uartStream.cpp  uartStream.hpp  webserver.cpp  webserver.hpp
